# rust_graphics

./: Cargo.toml  README.md  build.rs
assets/shaders/: grid.vert  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: debug.rs  game.rs  grid.rs  main.rs  mesh.rs  render_gl.rs  resources.rs  triangle.frag  triangle.rs  triangle.vert  wave_estimator.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  loader.rs  mod.rs  resources.rs  shader.rs  uniform.rs  viewport.rs
src/render_gl/model_parsers/: interface.rs  mod.rs  wavefront_obj.rs
