[package]
name = "maguey"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
render_gl_derive = { path = "render_gl_derive" }
nalgebra-glm = "0.3"
maplit = "1.0.1"
lazy_static = "1.3.0"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
